clusters/KC-Int/deployments/network/portainer/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: portainer
spec:
    selector:
        app: portainer
    ports:
        - name: http
          port: 9000
        - name: https
          port: 9443
